--- a/MORRABCV/Presentacion/Presentacion.csproj
+++ b/MORRABCV/Presentacion/Presentacion.csproj
@@ -174,6 +174,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Site.css" />
+    <Content Include="Estilos\EstilosGenerales.css" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
@@ -182,6 +183,7 @@
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Pres\config.xml" />
     <Content Include="Pres\frmCaseta.aspx" />
+    <Content Include="Pres\frmRegistro.aspx" />
     <Content Include="Pres\SolicitudesGen.asmx" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
@@ -374,6 +376,13 @@
     </Compile>
     <Compile Include="Pres\frmCaseta.aspx.designer.cs">
       <DependentUpon>frmCaseta.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Pres\frmRegistro.aspx.cs">
+      <DependentUpon>frmRegistro.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Pres\frmRegistro.aspx.designer.cs">
+      <DependentUpon>frmRegistro.aspx</DependentUpon>
     </Compile>
     <Compile Include="Pres\ServiciosGen.cs" />
     <Compile Include="Pres\SolicitudesGen.asmx.cs">
